--- a/DoneWithIt/package.json
+++ b/DoneWithIt/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
     "@react-native-community/hooks": "^100.1.0",
     "expo": "~54.0.13",
     "expo-status-bar": "~3.0.8",
