--- a/DoneWithIt/package.json
+++ b/DoneWithIt/package.json
@@ -5,24 +5,28 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-community/hooks": "^100.1.0",
     "expo": "~54.0.13",
+    "expo-constants": "^18.0.9",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "^0.5.1"
   },
   "private": true,
   "devDependencies": {
-    "@types/react": "^19.2.2",
+    "@types/react": "~19.1.10",
     "@types/react-native": "^0.72.8",
     "typescript": "^5.9.3"
   }
